Fix for GCC.

GCC has problems passing function pointers of functions with `auto`
return type, see https://gcc.gnu.org/bugzilla/show_bug.cgi?id=64194
As such we first instantiate the pointers into variables before
actually passing them in so that GCC can cope.

Also fixed some warnings and things for GCC.